Fixed blog mobile layout bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -692,7 +692,7 @@ header {
 	right: -200px;
 	width: 200px;
 	background-color: #a2adc3e9;
-	z-index: 999;
+	z-index: 990;
 	padding: var(--navbar-height) 0 0 10px;
 	overflow-y: auto;
 	height: 100vh;
@@ -717,7 +717,7 @@ header {
 	background: rgba(200, 200, 200, 0.8);
 	padding: 10px 5px;
 	cursor: pointer;
-	z-index: 1001;
+	z-index: 991;
 	border-top-left-radius: 5px;
 	border-bottom-left-radius: 5px;
 
@@ -747,7 +747,6 @@ header {
 
 	.post {
 		width: calc(100vw - 40px);
-		margin-right: 40px;
 	}
 }
 
